--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# See https://docs.github.com/get-started/getting-started-with-git/ignoring-files for more about ignoring files.
+# See https://docs.github.com/get-started/getting-started-with-git/ignoring-files for more about ignoring resources.
 
 # Compiled output
 /dist
@@ -37,6 +37,6 @@ yarn-error.log
 testem.log
 /typings
 
-# System files
+# System resources
 .DS_Store
 Thumbs.db
